<!--
  ~ Copyright 2023 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Horologist Auth Sample</string>

    <string name="auth_menu_google_sign_in_header">Google Sign-In</string>
    <string name="auth_menu_google_sign_in_prompt_item">Sign-in Prompt</string>
    <string name="auth_menu_google_sign_out_item">Sign out</string>
    <string name="auth_menu_token_share_header">Token Sharing</string>
    <string name="auth_menu_token_share_default_key_item">Default Key</string>
    <string name="auth_menu_token_share_custom_key_item">Custom Key</string>
    <string name="auth_menu_common_screens_header">Common screens</string>
    <string name="auth_menu_common_screens_streamline_sign_in_item">Streamline Sign-in</string>
    <string name="google_sign_in_prompt_message">Send messages and create chat groups with your friends</string>
    <string name="google_sign_out_success_message">Signed out successfully!</string>
    <string name="google_sign_in_prompt_already_signed_in_message">Already signed-in!</string>
    <string name="token_share_default_key_title">Token Sharing</string>
    <string name="token_share_default_key_message">Tokens emitted by the phone sample app, with the default key, while this is screen is visible will be displayed below:</string>
    <string name="token_share_custom_key_title">Token Sharing</string>
    <string name="token_share_custom_key_message">Tokens emitted by the phone sample app, with a custom key, while this is screen is visible will be displayed below:</string>
    <string name="common_screens_streamline_sign_in_header">Streamline Sign-in</string>
    <string name="common_screens_streamline_sign_in_no_accounts_item">No accounts available</string>
    <string name="common_screens_streamline_sign_in_single_account_item">Single account available</string>
    <string name="common_screens_streamline_sign_in_multiple_accounts_item">Multiple accounts available</string>
    <string name="common_screens_streamline_no_accounts_message">Should navigate to add account screen.</string>
</resources>